Add dark/light theme support

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -16,6 +16,7 @@
   "aria.map": "Map panel",
   "aria.mapContainer": "China map",
 
-  "language": "Language"
+  "language": "Language",
+  "theme.toggle": "Toggle dark/light theme"
 }
 
