--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -16,6 +16,7 @@
   "aria.map": "Harita paneli",
   "aria.mapContainer": "Çin haritası",
 
-  "language": "Dil"
+  "language": "Dil",
+  "theme.toggle": "Koyu/açık tema değiştir"
 }
 
